gobmkida/c3/sgfAddPlay
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfAddPlay/src/sgf/sgfnode.c:907:12: error: expected expression
*( _OWORD *)&v6->child = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfAddPlay/src/sgf/sgfnode.c:907:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v6->child = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfAddPlay/src/sgf/sgfnode.c:908:12: error: expected expression
*( _OWORD *)&v6->props = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfAddPlay/src/sgf/sgfnode.c:908:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v6->props = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfAddPlay/src/sgf/sgfnode.c:919:12: error: expected expression
*( _OWORD *)&v6->props = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfAddPlay/src/sgf/sgfnode.c:919:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v6->props = 0LL; 
   ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfAddPlay/src/obj/4/sgfnode.o] Error 1
